Fix SEO in about page on mobile

--- a/pages/about/About.module.css
+++ b/pages/about/About.module.css
@@ -9,3 +9,8 @@
 .wrapper ul {
     list-style-type: none;
 }
+
+.wrapper ul a {
+    display: inline-block;
+    padding: 1.1rem 0;
+}
